--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.12.0",
     "react-gsap": "^1.2.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.10.0",
     "react-leaflet": "^2.6.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
